# photoncast

./: .editorconfig  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.factory/: init.sh  review-memory.db  services.yaml
.omx/: metrics.json
crates/photoncast/: Cargo.toml
crates/photoncast-apps/: Cargo.toml
crates/photoncast-apps/src/: actions.rs  auto_quit.rs  bundle.rs  commands.rs  config.rs  error.rs  lib.rs  models.rs  privileged.rs  process.rs  scanner.rs  sleep.rs  uninstaller.rs
crates/photoncast-calculator/: Cargo.toml
crates/photoncast-calculator/benches/: calculator_bench.rs
crates/photoncast-calculator/src/: cache.rs  commands.rs  currency.rs  datetime.rs  error.rs  evaluator.rs  lib.rs  parser.rs  ui.rs  units.rs
crates/photoncast-calendar/: Cargo.toml
crates/photoncast-calendar/src/: commands.rs  conference.rs  config.rs  error.rs  eventkit.rs  lib.rs  models.rs
crates/photoncast-clipboard/: Cargo.toml
crates/photoncast-clipboard/benches/: clipboard_bench.rs
crates/photoncast-clipboard/src/: config.rs  encryption.rs  error.rs  lib.rs  models.rs  monitor.rs  storage.rs  url_metadata.rs
crates/photoncast-clipboard/src/ui/: actions.rs  clipboard_item.rs  clipboard_view.rs  mod.rs
crates/photoncast-core/: Cargo.toml
crates/photoncast-core/benches/: extensions.rs  search_bench.rs
crates/photoncast-core/src/: lib.rs
crates/photoncast-core/src/app/: actions.rs  config.rs  config_file.rs  integration.rs  keybindings.rs  mod.rs  state.rs
crates/photoncast-core/src/commands/: definitions.rs  mod.rs  system.rs  tests.rs
crates/photoncast-core/src/custom_commands/: executor.rs  mod.rs  placeholders.rs  store.rs
crates/photoncast-core/src/extensions/: api_bridge.rs  cache.rs  config.rs  context.rs  discovery.rs  dylib_cache.rs  host.rs  loader.rs  manager.rs  manifest.rs  mod.rs  permissions.rs  registry.rs  runtime.rs  sandbox.rs  signing.rs  storage.rs  watcher.rs
crates/photoncast-core/src/indexer/: alias.rs  icons.rs  metadata.rs  mod.rs  scanner.rs  watcher.rs
crates/photoncast-core/src/platform/: accessibility.rs  appearance.rs  dock_visibility.rs  file_actions.rs  file_browser.rs  hotkey.rs  hotkey_settings.rs  launch.rs  login_item.rs  menu_bar.rs  mod.rs  spotlight.rs  updates.rs
crates/photoncast-core/src/search/: engine.rs  file_index.rs  file_query.rs  file_search_backend.rs  fuzzy.rs  ignore_patterns.rs  index.rs  mod.rs  ranking.rs
crates/photoncast-core/src/search/providers/: apps.rs  apps_manage.rs  calendar.rs  commands.rs  custom_commands.rs  extension.rs  files.rs  mod.rs  optimized_apps.rs  quicklinks.rs  timer.rs  window.rs
crates/photoncast-core/src/search/spotlight/: config.rs  live_index.rs  mod.rs  predicate.rs  prefetch.rs  query.rs  result.rs  service.rs
crates/photoncast-core/src/storage/: database.rs  mod.rs  usage.rs
crates/photoncast-core/src/theme/: catppuccin.rs  colors.rs  mod.rs  provider.rs
crates/photoncast-core/src/ui/: animations.rs  empty_state.rs  launcher.rs  mod.rs  permission_dialog.rs  preferences.rs  result_group.rs  result_item.rs  results_list.rs  search_bar.rs
crates/photoncast-core/src/utils/: mod.rs  paths.rs  profiling.rs
crates/photoncast-core/tests/: packaging_tests.rs  prefetch_perf_test.rs  spotlight_integration.rs
crates/photoncast-ext-github/: Cargo.toml  extension.toml
crates/photoncast-ext-github/src/: lib.rs
crates/photoncast-ext-screenshots/: Cargo.toml  extension.toml
crates/photoncast-ext-screenshots/src/: lib.rs
crates/photoncast-extension-api/: Cargo.toml  README.md
crates/photoncast-extension-api/src/: lib.rs
crates/photoncast-extension-ipc/: Cargo.toml
crates/photoncast-extension-ipc/src/: connection.rs  error.rs  lib.rs  messages.rs  methods.rs  protocol.rs
crates/photoncast-extension-runner/: Cargo.toml
crates/photoncast-extension-runner/src/: main.rs
crates/photoncast-quicklinks/: Cargo.toml
crates/photoncast-quicklinks/src/: browser_import.rs  config.rs  error.rs  favicon.rs  lib.rs  library.rs  models.rs  placeholder.rs  storage.rs  toml_io.rs
crates/photoncast-quicklinks/src/ui/: argument_view.rs  create_view.rs  manage_view.rs  mod.rs
crates/photoncast-theme/: Cargo.toml
crates/photoncast-theme/src/: catppuccin.rs  colors.rs  gpui_colors.rs  lib.rs  provider.rs
crates/photoncast-timer/: Cargo.toml
crates/photoncast-timer/src/: commands.rs  config.rs  error.rs  lib.rs  parser.rs  scheduler.rs  ui.rs
crates/photoncast-window/: Cargo.toml
crates/photoncast-window/src/: accessibility.rs  animation.rs  commands.rs  config.rs  cycling.rs  display.rs  error.rs  layout.rs  lib.rs  overlay.rs
crates/photoncast/src/: app_events.rs  constants.rs  event_loop.rs  file_search_helper.rs  file_search_view.rs  icon_cache.rs  launcher.rs  main.rs  permissions_dialog.rs  platform.rs  preferences_window.rs
crates/photoncast/src/extension_views/: actions.rs  colors.rs  design_system.rs  detail_view.rs  form_view.rs  grid_view.rs  list_view.rs  mod.rs  navigation.rs  preview.rs
crates/photoncast/src/file_search_view/: browsing.rs  filter.rs  helpers.rs  mod.rs  render.rs
crates/photoncast/src/launcher/: actions.rs  animation.rs  calculator.rs  calendar.rs  indexing.rs  mod.rs  render.rs  render_actions.rs  render_calendar.rs  render_query.rs  render_results.rs  search.rs  uninstall.rs
crates/photoncast/src/preferences_window/: app_management.rs  appearance.rs  calendar.rs  clipboard.rs  extensions.rs  file_search.rs  general.rs  mod.rs  shortcuts.rs  sleep_timer.rs  window_management.rs
docs/: SPARKLE_INTEGRATION.md
homebrew/: README.md  SUBMISSION.md  TAP.md  photoncast.rb
reports/: issue-catalog.json  performance-evidence-2026-04-02.md  pr-ready-20260209.md  specs-vision-match-audit-2026-04-02.md  specs-vision-prioritized-fix-list-2026-04-02.md
resources/: AppIcon.icns  Info.plist  appcast-template.xml  entitlements.plist
scripts/: create-dev-signing-identity.sh  create-dmg.sh  generate-appcast.sh  generate-icon-source.py  generate-icons.sh  install-app.sh  (+10 more)
(+188 files in other folders)
