[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0-alpha"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["PhotonCast Contributors"]
repository = "https://github.com/photoncast/photoncast"

[workspace.dependencies]
# GPUI & UI Components (from Zed git repository)
# Using a known-working revision that doesn't have the core-graphics version conflict
gpui = { git = "https://github.com/zed-industries/zed", rev = "894866da9478003e77458e7a849353312d4c282c" }

# Async Runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "sync", "time"] }
futures = "0.3"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization & Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Search
nucleo = "0.5"

# macOS Integration
plist = "1.6"
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = "0.24"
accessibility = "0.1"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSGeometry", "NSData", "NSString", "NSArray"] }
objc2-app-kit = { version = "0.2", features = ["NSWindow", "NSApplication", "NSRunningApplication", "NSResponder", "NSView", "NSWorkspace", "NSImage", "NSImageRep", "NSBitmapImageRep", "NSGraphicsContext", "NSGraphics", "bitflags", "NSStatusBar", "NSStatusItem", "NSMenu", "NSMenuItem", "NSEvent", "NSButton", "NSControl"] }
objc2-event-kit = { version = "0.2", features = ["EKEventStore", "EKEvent", "EKCalendar", "EKCalendarItem", "EKTypes", "EKObject", "block2", "alloc"] }

# File System Watching
notify = "6.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
parking_lot = "0.12"
directories = "5.0"
dirs = "5.0"
hostname = "0.4"
url = "2.5"

# Dev Dependencies
proptest = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
