[package]
name = "photoncast-core"
description = "Core library for PhotonCast - search, indexing, and platform integration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
ui = ["dep:gpui", "photoncast-theme"]
perf = ["dep:tracing-subscriber", "dep:tracing-flame"]

[lib]
name = "photoncast_core"
path = "src/lib.rs"

[dependencies]
# GPUI for UI components (optional, causes test compilation issues due to macro depth)
gpui = { workspace = true, optional = true }

# Theme system (optional, requires GPUI)
photoncast-theme = { path = "../photoncast-theme", optional = true }

# Async Runtime
tokio.workspace = true
futures.workspace = true

# Error Handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
tracing-flame = { version = "0.2", optional = true }

# Serialization & Configuration
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Database
rusqlite.workspace = true

# Search
nucleo.workspace = true

# ABI & Dynamic Loading
abi_stable.workspace = true
libloading.workspace = true

# Productivity modules
photoncast-extension-api = { path = "../photoncast-extension-api" }
photoncast-extension-ipc = { path = "../photoncast-extension-ipc" }
photoncast-quicklinks = { path = "../photoncast-quicklinks", default-features = false }
photoncast-timer = { path = "../photoncast-timer", default-features = false }
photoncast-window = { path = "../photoncast-window", default-features = false }
photoncast-calendar = { path = "../photoncast-calendar", default-features = false }
photoncast-apps = { path = "../photoncast-apps", default-features = false }

# macOS Integration
plist.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation.workspace = true
core-foundation-sys.workspace = true
# Native Spotlight integration via objc2
objc2.workspace = true
objc2-foundation.workspace = true
objc2-app-kit.workspace = true
block2.workspace = true

# File System Watching
notify.workspace = true

# Directory Traversal
walkdir.workspace = true

# Unicode Processing
unicode-normalization.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
directories.workspace = true
dirs.workspace = true
url.workspace = true
regex.workspace = true
semver.workspace = true

# Security
security-framework.workspace = true

# Caching
lru.workspace = true

# HTTP Client for update checking
reqwest.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "search_bench"
harness = false
