[package]
name = "photoncast-ext-github"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Search GitHub repositories"

[lib]
crate-type = ["cdylib"]

[dependencies]
photoncast-extension-api = { path = "../photoncast-extension-api" }
abi_stable = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
