[package]
name = "photoncast-ext-screenshots"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Browse and manage screenshots"

[lib]
crate-type = ["cdylib"]

[dependencies]
photoncast-extension-api = { path = "../photoncast-extension-api" }
abi_stable = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
image = "0.25"
