[package]
name = "photoncast-timer"
description = "Sleep timer module for PhotonCast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["ui"]
ui = ["dep:gpui", "photoncast-theme"]

[lib]
name = "photoncast_timer"
path = "src/lib.rs"

[dependencies]
gpui = { workspace = true, optional = true }
photoncast-theme = { path = "../photoncast-theme", optional = true }

tokio.workspace = true
futures.workspace = true

thiserror.workspace = true
anyhow.workspace = true

tracing.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true

rusqlite.workspace = true
chrono.workspace = true
regex = "1"
lazy_static = "1.4"

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"
